--- a/dome.html
+++ b/dome.html
@@ -17,7 +17,7 @@
     </div>
     <a-scene>
       <a-assets>
-        <img id="sky360" src="panovr.jpg">
+        <img id="sky360" src="panovr.png">
       </a-assets>
 
       <!-- 調整 sky 讓貼圖中心 = 天頂 -->
