--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <a-scene mindar-image="imageTargetSrc: ./targets.mind; maxTrack: 1; uiScanning: false" renderer="physicallyCorrectLights: true" embedded vr-mode-ui="enabled: false" device-orientation-permission-ui="enabled: false">
       <a-assets id="assets-container">
-        <img id="domeTexture" src="pano.jpg">
+        <img id="domeTexture" src="pano.png">
       </a-assets>
 
       <a-entity light="type: ambient; intensity: 3"></a-entity>
